--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
                         can utilize and enhance my skills and build
                         applications that will benefit the organization.
                     </div>
-                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1tL7t4f4wdjQUR-O2w5mPVD6ribFS9UFQ/view?usp=sharing'">MY RESUMe</a>
-                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1tL7t4f4wdjQUR-O2w5mPVD6ribFS9UFQ/view?usp=sharing'">HackerRank</a>
-                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1tL7t4f4wdjQUR-O2w5mPVD6ribFS9UFQ/view?usp=sharing'">Leetcode</a>
+                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing'">MY RESUME</a>
+                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://www.hackerrank.com/lalitarana543'">HackerRank</a>
+                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://leetcode.com/lalitarana-543_7/'">Leetcode</a>
                 </div>
+               
             </div>
         </section>
 
