--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link nav-custom-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item navigation-list">
-                    <a class="nav-link nav-custom-link" href="#">Resume</a>
+                    <a class="nav-link nav-custom-link" href="images/resume.pdf" download>Resume</a>
                 </li>
             </ul>
         </div>
