--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                         can utilize and enhance my skills and build
                         applications that will benefit the organization.
                     </div>
-                    <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing'" target="_blank">MY RESUME</a>
+                    <!-- <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing'" target="_blank">MY RESUME</a> -->
+
+                    <a type="button" class="section-2-button fw-bold" onclick="window.open('https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing')" href="./images/resume.pdf" download >MY RESUME</a>
                     <a type="button" class="section-2-button fw-bold" onclick="location.href='https://www.hackerrank.com/lalitarana543'" target="_blank">HackerRank</a>
                     <a type="button" class="section-2-button fw-bold" onclick="location.href='https://leetcode.com/lalitarana-543_7/'" target="_blank">Leetcode</a>
                 </div>
