--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         <p><i class="fa-solid fa-square-phone"></i>6200306438</p>
                         <div class="social-icons">
                             <!-- <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a> -->
-                            <a href="https://twitter.com/ranaswikriti777"><i class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://github.com/lalitarana123456"><i class="fa-brands fa-github"></i></a>
                             <!-- <a href="#"><i class="fa-brands fa-instagram"></i></a> -->
                             <a href="https://www.linkedin.com/in/lalita-rana-77132a230/"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
