adding tech stack

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="nav-link nav-custom-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item navigation-list">
-                    <a class="nav-link nav-custom-link" href="#about-me">About</a>
+                    <a class="nav-link nav-custom-link" href="#about-me">About Me</a>
                 </li>
                 <li class="nav-item navigation-list">
                     <a class="nav-link nav-custom-link" href="#my-portfolio">Tools & Skills</a>
@@ -54,7 +54,7 @@
                     <a class="nav-link nav-custom-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item navigation-list">
-                    <a class="nav-link nav-custom-link" href="images/resume.pdf" download>Resume</a>
+                    <a class="nav-link nav-custom-link" href="images/fw17_1043-Lalita-Kumari-Resume.pdf" download>Resume</a>
                 </li>
 
                 <!-- <i class="fa-sharp fa-solid fa-circle-xmark" onclick="closemenu()"></i> -->
@@ -118,7 +118,7 @@
                     </div>
                     <!-- <a type="button" class="section-2-button fw-bold" onclick="location.href='https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing'" target="_blank">MY RESUME</a> -->
 
-                    <a type="button" class="section-2-button fw-bold" onclick="window.open('https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing')" href="./images/resume.pdf" download >MY RESUME</a>
+                    <a type="button" class="section-2-button fw-bold" onclick="window.open('https://drive.google.com/file/d/1E09wWYyQPszSjkNsbKkhghZA0sUremm0/view?usp=sharing')" href="./images/fw17_1043-Lalita-Kumari-Resume.pdf" download >MY RESUME</a>
                     <a type="button" class="section-2-button fw-bold" onclick="location.href='https://www.hackerrank.com/lalitarana543'" target="_blank">HackerRank</a>
                     <a type="button" class="section-2-button fw-bold" onclick="location.href='https://leetcode.com/lalitarana-543_7/'" target="_blank">Leetcode</a>
                 </div>
@@ -227,6 +227,10 @@
                             <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='https://github.com/raj74434/Monday.com'">Github Link</a>
                         </div>
                     </div>
+
+                    <div class="section-6-button">
+                        <h4>Tech Stack Used : = >  Html , Css ,Java Script, Vs Code, Github</h4>
+                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
                     <a href="https://playful-smakager-31da9c.netlify.app/home_page/homepage/"><img src="images/monday.jpg" class="img-fluid sec6-image" alt=""></a>
@@ -249,6 +253,12 @@
                         <div class="section-6-button">
                             <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='https://github.com/PRASHANT7277/ORBITZ'">Github Link</a>
                         </div>
+
+                        
+                    </div>
+
+                    <div class="section-6-button">
+                       <h4>Tech Stack Used : = >  Html , Css ,Java Script, Vs Code, Github</h4>
                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
@@ -277,6 +287,10 @@
                             <a class="sec6-btn text-uppercase fw-bold" onclick="location.href='https://github.com/raj2820/Vaccination-Click'">Github Link</a>
                         </div>
                     </div>
+
+                    <div class="section-6-button">
+                        <h4>Tech Stack Used : = >  Java , Spring Framework ,Spring Data JPA, Hibernate, MySQL, Swagger</h4>
+                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
                     <a href="https://github.com/raj2820/Vaccination-Click"><img src="https://github.com/raj2820/Vaccination-Click" class="img-fluid sec6-image" alt=""></a>
